--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcul ta AAH aah</title>
+    <title>Calcul ta AAH</title>
 </head>
 
 <body>
