correction index.html

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur aah</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/">
     <link rel="stylesheet" href="../css/style.css">
   </head>
 
@@ -15,7 +14,7 @@
 
       <article class="title">
         <img class="title__logo" src="../img/Logo-CtAAH.png">
-        <h1 class="title__name">Calcul ta AAH </h1>
+        <h1 class="title__name">Estime ton AAH </h1>
         
       </article>
 
@@ -29,7 +28,7 @@
 
       <article class="paragraphe">
         <h2 class="p__title">
-          Pour la création du site <strong>"Calcul ta AAH"</strong>
+          Pour la création du site <strong>"Estime ton AAH"</strong>
         </h2> 
         <p>
           - On l'a diviser en trois partie.<br>
