--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div style="display: flex; flex-direction: column;">
-        <h1 style="align-self: center;">Calcul ta AAH</h1>
+        <h1 style="align-self: center;">Estime ton AAH</h1>
         <h2 style="align-self: center;">Bienvenu sur le serveur Back-end</h2>
         <h2 style="align-self: center;">
             <a href="https://htmlbackcalcultaaah.herokuapp.com/" target="_blank">
-            aller sur la page de présentation</a>
+            Aller sur la page de présentation</a>
         </h2>
 
     </div>
