--- a/public/html/home.html
+++ b/public/html/home.html
@@ -19,10 +19,10 @@
       </article>
 
       <article class="paragraphe">
-          <h2 class="p__title">Ce projet a pour but:</h2>
+          <h2 class="p__title">Ce projet a pour but :</h2>
           <p>
-            - En premier lieu, de permettre a un foyer dont une personne qui perçois l'AAH, de connaître son plafond en fonction de l'évolution des revenus et de la composition du foyer.<br>
-            - En second lieu, d'interagir avec d'autres personnes inscrite sur le site.<br>
+            - En premier lieu, de permettre à un foyer dont une personne qui perçois l'AAH, de connaître son plafond en fonction de l'évolution des revenus et de la composition du foyer.<br>
+            - En second lieu, d'interagir avec d'autres personnes inscrites sur le site.<br>
           </p>
       </article>
 
@@ -33,26 +33,28 @@
         <p>
           - On l'a diviser en trois partie.<br>
           <ul>
-            <li>La première partie : Le Front-End (en cours de création)</li>
-            <li>La deuxième partie : Le Back-end ( donc ici)</li>
-            <li>la troisième partie : la base de donnée (
+            <li>La première partie : le Front-End (en cours de création)</li>
+            <li>La deuxième partie : le Back-end (
+              <a href="https://projet-estime-ton-aah-back.herokuapp.com/">donc ici)</a>
+            </li>
+            <li>La troisième partie : la base de données (
               <a href="https://www.elephantsql.com/">sur ElephantSQL)</a>
             </li>
           </ul>
-          - voici une ilustration simple :<br>
+          - Voici une illustration simple :<br>
           <img class="example__img" src="../img/60480-iceberg-fr.jpg">
         </p>
       </article>
 
       <article class="paragraphe">
         <h2 class="p__title">
-          Bienvenu dans le côté obscure, ici c'est le <em> Back-end</em>.
+          Bienvenu dans le côté obscur, ici c'est le <em> Back-end</em>.
         </h2>
         <p>
           - Nous avons créé une API (le Back-end) pour interagir avec une base de données en SQL qui est en ligne sur
           <a href="https://www.elephantsql.com/">ElephantSQL.</a>
-          en formule GRATUITE.<br>
-          - Notre application Back-end est déployer sur 
+          En formule GRATUITE.<br>
+          - Notre application Back-end est déployée sur 
           <a href="https://www.heroku.com/">Heroku</a>
           aussi en formule GRATUITE.
           
