--- a/public/html/home.html
+++ b/public/html/home.html
@@ -97,7 +97,7 @@
                 <li>Lead Dev Back-end</li>
                 <li>Lead Deployment</li>
                 <li>Git Master Back-end</li>
-                <li>Référent Technique:</li>
+                <li>Référent Technique :</li>
                   <ul>
                     <li>Sequelize</li>
                     <li>
@@ -115,7 +115,7 @@
                 <img class="card__ico" src="../img/github.png" alt="Régis BRUNET BLEC sur github">
                 </a>
                 <a href="mailto:regis.blec@gmailcom?subject=depuis le back-end de 'Calcul ta aah'">
-                <img class="card__ico" src="../img/mail.png" alt="Régis BRUNET BLEC couriel">
+                <img class="card__ico" src="../img/mail.png" alt="Régis BRUNET BLEC courriel">
                 </a>
               </article>
           </section>
@@ -129,7 +129,7 @@
               <ul>
                 <li>Dev Back-end</li>
                 <li>Dev Front-end</li>
-                <li>Référent Technique:</li>
+                <li>Référent Technique :</li>
                   <ul>
                       <li>Sanitizer</li>
                   </ul>
@@ -143,7 +143,7 @@
                 <img class="card__ico" src="../img/github.png" alt="Yan-Coquoz sur github">
                 </a>
                 <a href="mailto:yan.coquoz@gmail.com?subject=depuis le back-end de 'Calcul ta aah'">
-                <img class="card__ico" src="../img/mail.png" alt="Yan-Coquoz couriel">
+                <img class="card__ico" src="../img/mail.png" alt="Yan-Coquoz courriel">
                 </a>
             </article>
           </section>
@@ -166,7 +166,7 @@
                 <img class="card__ico" src="../img/github.png" alt="Thibaud FOURNES sur github">
                 </a>
                 <a href="mailto: thibaud.fournes@gmail.com?subject=depuis le back-end de 'Calcul ta aah'">
-                <img class="card__ico" src="../img/mail.png" alt="Thibaud FOURNES couriel">
+                <img class="card__ico" src="../img/mail.png" alt="Thibaud FOURNES courriel">
                 </a>
               </article>
           </section>
@@ -192,7 +192,7 @@
                 <img class="card__ico" src="../img/github.png" alt="Jérôme BERSIN sur github">
                 </a>
                 <a href="mailto:bersin.jerome@gmail.com?subject=depuis le back-end de 'Calcul ta aah'">
-                <img class="card__ico" src="../img/mail.png" alt="Jérôme BERSIN couriel">
+                <img class="card__ico" src="../img/mail.png" alt="Jérôme BERSIN courriel">
                 </a>
               </article>
           </section>
