--- a/public/html/home.html
+++ b/public/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estime ton AAH</title>
+    <title>Estime ton aah</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -13,7 +13,7 @@
     <section class="section">
 
       <article class="title">
-        <img class="title__logo" src="../img/EtAAH-Final.png">
+        <img class="title__logo" src="../img/Logo-CtAAH.png">
         <h1 class="title__name">Estime ton AAH </h1>
         
       </article>
@@ -159,9 +159,9 @@
                 </ul>
               </article>
               <article class="card__contact">
-               <!-- <a href="tel:+33000000000">
+               <a href="tel:+33638674965">
                 <img class="card__ico" src="../img/phone.png" alt="Thibaud FOURNES numéro de téléphone">
-                </a>-->
+                </a>
                 <a href="https://github.com/ThibaudFournes77" target="_blank">
                 <img class="card__ico" src="../img/github.png" alt="Thibaud FOURNES sur github">
                 </a>
