--- a/public/html/home.html
+++ b/public/html/home.html
@@ -31,7 +31,7 @@
           Pour la création du site <strong>"Estime ton AAH"</strong>
         </h2> 
         <p>
-          - On l'a diviser en trois partie.<br>
+          - On l'a divisé en trois partie.<br>
           <ul>
             <li>La première partie : le Front-End (en cours de création)</li>
             <li>La deuxième partie : le Back-end (
@@ -48,7 +48,7 @@
 
       <article class="paragraphe">
         <h2 class="p__title">
-          Bienvenu dans le côté obscur, ici c'est le <em> Back-end</em>.
+          Bienvenue dans le côté obscur, ici c'est le <em> Back-end</em>.
         </h2>
         <p>
           - Nous avons créé une API (le Back-end) pour interagir avec une base de données en SQL qui est en ligne sur
