--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,7 +11,7 @@
 <body>
     <div style="display: flex; flex-direction: column;">
         <h1 style="align-self: center;">Estime ton AAH</h1>
-        <h2 style="align-self: center;">Bienvenu sur le serveur Back-end</h2>
+        <h2 style="align-self: center;">Bienvenue sur le serveur Back-end</h2>
         <h2 style="align-self: center;">
             <a href="https://htmlbackestimetonaah.herokuapp.com/" target="_blank">
             Aller sur la page de présentation</a>
