--- a/public/html/update.html
+++ b/public/html/update.html
@@ -40,7 +40,7 @@
             V1.1 - 30 septembre 2021 :
           </h2>
           <p>
-            Nouveauté : 
+            Nouveautés : 
             <ul>
               <li>Création d'une page HTLM</li>
               <li>Intégration CSS</li>
@@ -49,7 +49,7 @@
             </ul>
           </p>
           <p>
-            Correction : 
+            Corrections : 
             <ul>
               <li>Modification du ficher router</li>
               <li>Intégration CSS dans le HTML</li>
